--- a/gcc/ChangeLog.1
+++ b/gcc/ChangeLog.1
@@ -4287,7 +4287,7 @@ Thu Feb 25 21:52:54 1999  J"orn Rennecke  <amylaar@cygnus.co.uk>
 	in registers.
 
 	* expr.h (PRETEND_OUTGOING_VARARGS_NAMED): Provide default definition.
-	* function.c (assign_parms): Honour PRETEND_OUTGOING_VARARGS_NAMED.
+	* function.c (assign_parms): Honor PRETEND_OUTGOING_VARARGS_NAMED.
 	* calls.c (expand_call): Likewise.
 
 	* sh.c (sh_expand_prologue): For TARGET_HITACHI, don't push varargs /
