--- a/gcc/ChangeLog.2
+++ b/gcc/ChangeLog.2
@@ -262,7 +262,7 @@ Fri Dec 24 12:34:26 1999  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 Thu Dec 23 23:15:22 1999  J"orn Rennecke <amylaar@cygnus.co.uk>
 
-	* reload1.c (emit_input_reload_insns): Restore old behaviour
+	* reload1.c (emit_input_reload_insns): Restore old behavior
 	wrt. 'special' reloads.
 
 1999-12-23  Zack Weinberg  <zack@wolery.cumb.org>
