--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-16  Richard Earnshaw  <rearnsha@arm.com>
+
+	* objc.dg/bitfield-2.m (dg-options): Add -fsigned-char.
+
 2002-09-16  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* ChangeLog: follow spelling conventions.
